--- a/index.html
+++ b/index.html
@@ -98,27 +98,27 @@
                     <div class="row text-center">
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>                            
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>                            
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>                            
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>                            
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="..\Portfolio\img\isobar\home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
                         </div>
                     </div>                    
                 </div>
@@ -134,75 +134,75 @@
                     
                     <div class="row text-center">
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\apache.png" alt="Apache" class="img-fluid"/>
+                            <img src="img/skills/apache.png" alt="Apache" class="img-fluid"/>
                             <div class="bg-dark text-light">Apache Server</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\asp-net.png" alt="ASP.NET" class="img-fluid"/>
+                            <img src="img/skills/asp-net.png" alt="ASP.NET" class="img-fluid"/>
                             <div class="bg-dark text-light">ASP.NET Framework</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\azure.png" alt="Azure" class="img-fluid"/>
+                            <img src="img/skills/azure.png" alt="Azure" class="img-fluid"/>
                             <div class="bg-dark text-light">Azure Cloud</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\bootstrap.png" alt="Bootstrap" class="img-fluid"/>
+                            <img src="img/skills/bootstrap.png" alt="Bootstrap" class="img-fluid"/>
                             <div class="bg-dark text-light">Bootstrap</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\c-plus-plus.png" alt="C/C++" class="img-fluid"/>
+                            <img src="img/skills/c-plus-plus.png" alt="C/C++" class="img-fluid"/>
                             <div class="bg-dark text-light">C/C++</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\c-sharp.png" alt="C#" class="img-fluid"/>
+                            <img src="img/skills/c-sharp.png" alt="C#" class="img-fluid"/>
                             <div class="bg-dark text-light">C#</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\css.png" alt="CSS3" class="img-fluid"/>
+                            <img src="img/skills/css.png" alt="CSS3" class="img-fluid"/>
                             <div class="bg-dark text-light">CSS3</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\html.png" alt="HTML" class="img-fluid"/>
+                            <img src="img/skills/html.png" alt="HTML" class="img-fluid"/>
                             <div class="bg-dark text-light">HTML5</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\java.png" alt="Java" class="img-fluid"/>
+                            <img src="img/skills/java.png" alt="Java" class="img-fluid"/>
                             <div class="bg-dark text-light">Java</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\javascript.png" alt="JavaScript" class="img-fluid"/>
+                            <img src="img/skills/javascript.png" alt="JavaScript" class="img-fluid"/>
                             <div class="bg-dark text-light">JavaScript</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\jdbc.png" alt="JDBC" class="img-fluid"/>
+                            <img src="img/skills/jdbc.png" alt="JDBC" class="img-fluid"/>
                             <div class="bg-dark text-light">JDBC</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\jquery.png" alt="jQuery" class="img-fluid"/>
+                            <img src="img/skills/jquery.png" alt="jQuery" class="img-fluid"/>
                             <div class="bg-dark text-light">jQuery</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\mac.png" alt="Mac OS X"  class="img-fluid"/>
+                            <img src="img/skills/mac.png" alt="Mac OS X"  class="img-fluid"/>
                             <div class="bg-dark text-light">Mac OS X</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\mysql.png" alt="MySQL" class="img-fluid"/>
+                            <img src="img/skills/mysql.png" alt="MySQL" class="img-fluid"/>
                             <div class="bg-dark text-light">MySQL</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\python.png" alt="Python" class="img-fluid"/>
+                            <img src="img/skills/python.png" alt="Python" class="img-fluid"/>
                             <div class="bg-dark text-light">Python</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\ruby.png" alt="Ruby" class="img-fluid"/>
+                            <img src="img/skills/ruby.png" alt="Ruby" class="img-fluid"/>
                             <div class="bg-dark text-light">Ruby</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\react.png" alt="React" class="img-fluid"/>
+                            <img src="img/skills/react.png" alt="React" class="img-fluid"/>
                             <div class="bg-dark text-light">React</div>
                         </div>
                         <div class="col-md-2 col-sm-4 col-4" id="skills">
-                            <img src="..\Portfolio\img\skills\windows.png" alt="Windows" class="img-fluid"/>
+                            <img src="img/skills/windows.png" alt="Windows" class="img-fluid"/>
                             <div class="bg-dark text-light">Windows OS</div>
                         </div>
                     </div>
