--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container text-center">
                 <header><h1 class="display-4">Basit Bada</h1></header>
-                <img id="profile-pic" src="img/BBHZ3647.jpg" alt="Profile Picture" width="250px" height="250px">
+                <img id="profile-pic" src="img/BBHZ3647.JPG" alt="Profile Picture" width="250px" height="250px">
                 <p class="lead">Computer Science Graduate, Software Developer.</p>
                 <div id="start">Start</div>
             </div>
