--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                     <div class="row text-center">
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
-                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <a href="projects/isobar.html">
+                                <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
+                            </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
@@ -206,7 +208,7 @@
                 
                 <!-- Social buttons -->
                 <!--Email-->
-                <a class="email-ic mr-3" role="button" href="mailto:atbfresh@yahoo.com">
+                <a class="email-ic mr-3" role="button" href="mailto:basitbada20@gmail.com">
                     <i class="far fa-lg fa-envelope"></i>
                 </a>
                 <!--Github-->
