--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
                             <a href="projects/isobar.html">
-                                <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
+                                <img src="img/isobar/home.png" alt="Isobar" class="img-fluid"/>
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light">Isobar</div>
-                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <div class="bg-dark text-light">Chocoholic Anonymous</div>
+                            <img src="img/Choc-An/diagram1.png" alt="Chocoholic Anonymous"  class="img-fluid"/>                            
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light">Isobar</div>
-                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>                            
+                            <div class="bg-dark text-light">HCI</div>
+                            <a href="projects/hci.html">
+                                <img src="img/hci/deals.png" alt="HCI" class="img-fluid"/>
+                            </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
