--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">HCI</div>
-                            <a href="img/projects/hci.html">
+                            <a href="projects/HCI.html">
                                 <img src="img/hci/deals.png" alt="HCI" class="img-fluid"/>
                             </a>
                         </div>
