--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">HCI</div>
-                            <a href="projects/HCI.html">
-                                <img src="img/hci/deals.png" alt="HCI" class="img-fluid"/>
+                            <a href="projects/hci.html">
+                                <img src="img/HCI/deals.png" alt="HCI" class="img-fluid"/>
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
