--- a/projects/hci.html
+++ b/projects/hci.html
@@ -45,10 +45,10 @@
             </div>
         </nav>
         
-        <section id="projects">
+        <section id="project">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <h1 class="display-4 text-center">HCI (COMP 3020 Project)</h1>
+                    <h1 class="display-4 text-center">Human-Computer Interactions (HCI)</h1>
                     <hr class="my-4">
                     <!--<p class="lead">Isobarr</p>-->
                     
@@ -92,8 +92,18 @@
                                 <br/>Web development
                             </p>
                             <p class="lead">
+                                <span class="font-weight-bold">Link</span>
+                                <br/><a href="https://badacorp.github.io/HCI/homepage.html">HCI home page</a>
+                            </p>
+                            <p class="lead">
+                                <span class="font-weight-bold">Group members</span>
+                                <br/>Soboton
+                                <br/>Ponkriyon
+                                <br/>Efufulele
+                            </p>                            
+                            <p class="lead">
                                 <span class="font-weight-bold">Technologies Used</span>
-                                <br/>HTML, CSS, JavaScript
+                                <br/>HTML, CSS, JavaScript, Bootstrap
                             </p>
                         </div>
                         <div class="col-lg-12">
