--- a/index.html
+++ b/index.html
@@ -87,31 +87,33 @@
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
                             <a href="projects/isobar.html">
-                                <img src="img/isobar/home.png" alt="Isobar" class="img-fluid"/>
+                                <img src="img/isobar/thumbnail.png" alt="Isobar" class="img-fluid"/>
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Chocoholic Anonymous</div>
-                            <img src="img/Choc-An/diagram1.png" alt="Chocoholic Anonymous"  class="img-fluid"/>                            
+                            <a href="projects/chocAn.html">
+                                <img src="img/Choc-An/diagram1.png" alt="Chocoholic Anonymous"  class="img-fluid"/>
+                            </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">HCI</div>
                             <a href="projects/hci.html">
-                                <img src="img/HCI/deals.png" alt="HCI" class="img-fluid"/>
+                                <img src="img/HCI/deals.png" alt="HCI" class="img-fluid"/> 
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light">Isobar</div>
-                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
+                            <div class="bg-dark text-light"><i>Coming soon ...</i></div>
+                            <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>--> 
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light">Isobar</div>
-                            <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>                            
-                        </div>
-                        <div class="col-md-4 col-sm-6" id="projects">
+                            <div class="bg-dark text-light"><i>Coming soon ...</i></div>
+                            <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>-->                           
+                        </div> 
+                        <!--<div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
                             <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
-                        </div>
+                        </div>-->
                     </div>                    
                 </div>
             </div>
