--- a/projects/hci.html
+++ b/projects/hci.html
@@ -21,7 +21,7 @@
     
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar">
-            <a class="navbar-brand" href="index.html">[{;}]</a>
+            <a class="navbar-brand" href="../index.html">[{;}]</a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
