--- a/projects/hci.html
+++ b/projects/hci.html
@@ -97,9 +97,9 @@
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Group members</span>
-                                <br/>Soboton
-                                <br/>Ponkriyon
-                                <br/>Efufulele
+                                <br/>Quoc Le
+                                <br/>Ryan Singh
+                                <br/>Puqi Xu
                             </p>                            
                             <p class="lead">
                                 <span class="font-weight-bold">Technologies Used</span>
