--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light"><i>Coming soon ...</i></div>
-                            <img src="#" alt="fruit Slash game (jQuery)"/> 
+                            <a href="projects/CMS.html">
+                                <img src="#" alt="fruit Slash game (jQuery)"/>
+                            </a> 
                             <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>--> 
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
