Updated links and spellings

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light"><i>Coming soon ...</i></div>
+                            <div class="bg-dark text-light"><i>Customer Management App</i></div>
                             <a href="projects/CMS.html">
-                                <img src="#" alt="fruit Slash game (jQuery)"/>
+                                <img src="#" alt="Customer Management App"/>
                             </a> 
                             <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>--> 
                         </div>
