--- a/projects/CMS.html
+++ b/projects/CMS.html
@@ -47,7 +47,7 @@
         <section>
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <h1 class="display-4 text-center">Chocoholic Anonymous</h1>
+                    <h1 class="display-4 text-center">CMS</h1>
                     <hr class="my-4">
                     <!--<p class="lead">Isobarr</p>-->
                     
@@ -106,11 +106,11 @@
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Link</span>
-                                <br/><a href="https://github.com/BadaCorp/Chocoholic-Anonymous/blob/master/SDLC.pdf">documnetation</a>
+                                <br/><a href="https://badacorp.github.io/customer-management-app/">customer-management-app</a>
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Technologies Used</span>
-                                <br/>HTML, CSS, React JS, Git
+                                <br/>HTML, CSS, ReactJS, Git
                             </p>
                         </div>
                         <div class="col-lg-12">
