--- a/projects/chocAn.html
+++ b/projects/chocAn.html
@@ -106,7 +106,7 @@
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Link</span>
-                                <br/><a href="https://github.com/BadaCorp/Chocoholic-Anonymous/blob/master/SDLC.pdf">documnetation</a>
+                                <br/><a href="https://github.com/BadaCorp/Chocoholic-Anonymous/blob/master/SDLC.pdf">documentation</a>
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Technologies Used</span>
