--- a/projects/CMS.html
+++ b/projects/CMS.html
@@ -66,22 +66,7 @@
                                 
                                 <div class="carousel-inner" id="zoom">
                                     <div class="carousel-item active" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram1.png" alt="diagram1"> -->
-                                    </div>
-                                    <div class="carousel-item" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram2.png" alt="diagram2"> -->
-                                    </div>
-                                    <div class="carousel-item" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram3.png" alt="diagram3"> -->
-                                    </div>
-                                    <div class="carousel-item" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram4.png" alt="diagram4"> -->
-                                    </div>
-                                    <div class="carousel-item" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram5.png" alt="diagram5"> -->
-                                    </div>
-                                    <div class="carousel-item" id="zoom">
-                                        <!-- <img class="d-block w-100" src="../img/Choc-An/diagram6.png" alt="diagram6"> -->
+                                        <img class="d-block w-100" src="../img/customer-management-app/cma.png" alt="diagram1">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
