Edited index.html and HCI.html
- Changed the "Graduate" text to "Undergraduate".
 - Completed the about HCI Bar & Restaurant section.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container text-center">
                 <header><h1 class="display-4">Basit Bada</h1></header>
                 <img id="profile-pic" src="img/BBHZ3647.JPG" alt="Profile Picture" width="250px" height="250px">
-                <p class="lead">Computer Science Graduate, Software Developer.</p>
+                <p class="lead">Computer Science Undergraduate, Software Developer.</p>
                 <!--<div id="start">Start</div>-->
             </div>
         </div>
@@ -81,8 +81,6 @@
                     <hr class="my-4">
                     <p class="lead"></p>
                     
-                    <marquee style="color:red">Under maintenance!</marquee>
-                    
                     <div class="row text-center">
                         <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
@@ -110,7 +108,7 @@
                             <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>--> 
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light"><i>Coming soon ...</i></div>
+                            <div class="bg-dark text-light"><i>...</i></div>
                             <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>-->                           
                         </div> 
                         <!--<div class="col-md-4 col-sm-6" id="projects">
