--- a/projects/hci.html
+++ b/projects/hci.html
@@ -47,7 +47,7 @@
         <section id="project">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <h1 class="display-4 text-center">Human-Computer Interactions (HCI)</h1>
+                    <h1 class="display-4 text-center">HCI Bar & Restaurant</h1>
                     <hr class="my-4">
                     <!--<p class="lead">Isobarr</p>-->
                     
@@ -97,6 +97,7 @@
                             </p>
                             <p class="lead">
                                 <span class="font-weight-bold">Group members</span>
+                                <br/>Basit Bada
                                 <br/>Quoc Le
                                 <br/>Ryan Singh
                                 <br/>Puqi Xu
@@ -107,9 +108,15 @@
                             </p>
                         </div>
                         <div class="col-lg-12">
-                            <p class="lead font-weight-bold text-center">About HCI</p>
+                            <p class="lead font-weight-bold text-center">About HCI Bar & Restaurant</p>
                             <p class="lead">
-                                Lorem ....
+                                HCI Bar & Restaurant refers to a group project that was carried out by four group members (including me) for the Human-Computer Interactions (COMP 3020) Project. The purpose of the project was to design and build a web application as a collaborative group. So, we decided to build a website where customers can order and pay for for food or drinks.
+                            </p>
+                            <p class="lead">
+                                We identified the potential stakeholders that would be responsible for using the site, conducted a flow analysis that identifies how data flows through the system, conducted an error analysis to identify things that could go wrong while using the site, created scenarios of user activities on the site, and used surveys/questionaires to gather feedback from random users. Afterwards, drew low-fidelity prototypes of the site on paper. Then, we implemented the website.
+                            </p>
+                            <p class="lead">
+                                Servers and databases were not required and were discouraged for the project, so they were not used and all data were hardcoded. For example, the login details; username="comp3020" and password="comp3020" are some of the data that were hardcoded.  
                             </p>
                         </div>
                     </div>
