--- a/projects/hci.html
+++ b/projects/hci.html
@@ -110,10 +110,10 @@
                         <div class="col-lg-12">
                             <p class="lead font-weight-bold text-center">About HCI Bar & Restaurant</p>
                             <p class="lead">
-                                HCI Bar & Restaurant refers to a group project that was carried out by four group members (including me) for the Human-Computer Interactions (COMP 3020) Project. The purpose of the project was to design and build a web application as a collaborative group. So, we decided to build a website where customers can order and pay for for food or drinks.
+                                HCI Bar & Restaurant refers to a group project that was carried out by four group members (including me) for the Human-Computer Interactions (COMP 3020) Project. The purpose of the project was to design and build a web application as a collaborative group while making documentations from the planning stage to post-implementation stage. So, we decided to build a website where customers can order and pay for food or drinks.
                             </p>
                             <p class="lead">
-                                We identified the potential stakeholders that would be responsible for using the site, conducted a flow analysis that identifies how data flows through the system, conducted an error analysis to identify things that could go wrong while using the site, created scenarios of user activities on the site, and used surveys/questionaires to gather feedback from random users. Afterwards, drew low-fidelity prototypes of the site on paper. Then, we implemented the website.
+                                We identified the potential stakeholders that would be responsible for using the site, conducted a flow analysis that identifies how data flows through the system, conducted an error analysis to identify things that could go wrong while using the site, created scenarios of user activities on the site, and used surveys/questionaires to gather feedback from random users. Afterwards, we drew low-fidelity prototypes of the site on paper. Then, we implemented the website.
                             </p>
                             <p class="lead">
                                 Servers and databases were not required and were discouraged for the project, so they were not used and all data were hardcoded. For example, the login details; username="comp3020" and password="comp3020" are some of the data that were hardcoded.  
