Included Wanderlust project
- created a wanderlust.html page
- included a link for the new page on index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         Software development has been my passion since I was a kid. My favorite website as a kid was the Cartoon Network website , where I had the opportunity to play online games. So, I was very excited to create a family website at the age of twelve using only HTML. Fast forward to the future, I have built more complex websites using new technologies, some of which did not exist when I created my first one. 
                     </p>
                     <p class="lead">
-                        I am a recent computer science graduate 🎓 with some experience in the information technology and service industry. My dream is to be part of a software development environment where my colleagues and I work together to achieve the same goal. I want to be a member of that team that will create the unimaginable.
+                        I am a recent computer science undergraduate 🎓 with some experience in the information technology and service industry. My dream is to be part of a software development environment where my colleagues and I work together to achieve the same goal. I want to be a member of that team that will create the unimaginable.
                     </p>
                     <p class="lead">
                         I want to be one of the architects of the future. 🔮
@@ -89,6 +89,12 @@
                             </a>
                         </div>
                         <div class="col-md-4 col-sm-6" id="projects">
+                            <div class="bg-dark text-light">Wanderlust</div>
+                            <a href="projects/wanderlust.html">
+                                <img src="img/isobar/thumbnai.png" alt="Wanderlust" class="img-fluid"/>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Chocoholic Anonymous</div>
                             <a href="projects/chocAn.html">
                                 <img src="img/Choc-An/diagram1.png" alt="Chocoholic Anonymous"  class="img-fluid"/>
@@ -107,10 +113,6 @@
                             </a> 
                             <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>--> 
                         </div>
-                        <div class="col-md-4 col-sm-6" id="projects">
-                            <div class="bg-dark text-light"><i>...</i></div>
-                            <!--<img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>-->                           
-                        </div> 
                         <!--<div class="col-md-4 col-sm-6" id="projects">
                             <div class="bg-dark text-light">Isobar</div>
                             <img src="img/isobar/home.png" alt="Profile Picture"  class="img-fluid"/>
